# esexpr

./: .editorconfig  .gitignore  README.md
dotnet/: ESExpr.sln
dotnet/ESExpr.Runtime/: AssemblyInfo.cs  BinToken.cs  Binary.cs  ConstructorAttribute.cs  DecodeException.cs  DecodeFailurePath.cs  DefaultValueAttribute.cs  DictAttribute.cs  ESExpr.Runtime.csproj  ESExprBinaryReader.cs  ESExprBinaryWriter.cs  ESExprCodecAttribute.cs  ESExprEnableCodecOverridesAttribute.cs  ESExprOverrideCodecAttribute.cs  ESExprTag.cs  Expr.cs  IDictCodec.cs  IESExprCodec.cs  IOptionalValueCodec.cs  IVarargCodec.cs  InlineValueAttribute.cs  KeywordAttribute.cs  Nat.cs  Option.cs  OptionalAttribute.cs  SimpleEnumCodec.cs  SliceList.cs  StringTable.cs  SyntaxException.cs  VDict.cs  VList.cs  VarargAttribute.cs
dotnet/ESExpr.Runtime/Codecs/: BinaryCodec.cs  BoolCodec.cs  DoubleCodec.cs  FloatCodec.cs  IntCodecs.cs  StringCodec.cs
dotnet/ESExpr.Runtime/docs/: readme.md
dotnet/ESExpr.SourceGenerator/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  CodecGenerator.cs  CodecOverrideHandler.cs  CompatNullable.cs  CompatRequiredInit.cs  ESExpr.SourceGenerator.csproj  ESExprCodecSourceGenerator.cs  Errors.cs  GenUtils.cs  RecordCodecGenerator.cs  UnionRecordCodecGenerator.cs
dotnet/ESExpr.SourceGenerator/docs/: readme.md
dotnet/ESExpr.Tests/: BinaryFormatTests.cs  CompileTests.cs  ConstructorName123Conversion.cs  ConstructorNameTests.cs  ConstructorName_456Conversion.cs  ESExpr.Tests.csproj  InlineValueEnum.cs  InlineValueTests.cs  KeywordArgTests.cs  KeywordArguments.cs  ListFields.cs  MyEnum.cs  MyGenericRecord.cs  MySimpleEnum.cs  PrimitiveFields.cs  RepeatedArguments.cs  RepeatedArgumentsTest.cs  SimpleEnumTests.cs  SimpleEnumUser.cs  TestBase.cs
java/: .sdkmanrc  settings.gradle.kts
java/generator/: build.gradle.kts
java/generator/gen_tests/: build.gradle.kts
java/generator/gen_tests/dev/argon/esexpr/gen_error_tests/: MyRecord_Codec.java  MyRecord_CodecImpl.java
java/generator/gen_tests/src/main/java/: module-info.java
java/generator/gen_tests/src/test/java/: module-info.java
java/generator/src/main/java/: module-info.java
java/generator/src/main/java/dev/argon/esexpr/generator/: AbortException.java  CodecOverride.java  ESExprGeneratorProcessor.java  EnumCodecGenerator.java  GeneratorBase.java  MetadataCache.java  RecordCodecGenerator.java  (+1 more)
java/lib/: build.gradle.kts
java/lib/src/main/java/: module-info.java
java/lib/src/main/java/dev/argon/esexpr/: BinToken.java  Constructor.java  DecodeException.java  DefaultValue.java  Dict.java  DictCodec.java  ESExpr.java  ESExprBinaryReader.java  ESExprBinaryWriter.java  ESExprCodec.java  ESExprCodecGen.java  ESExprCodecOverrideList.java  ESExprEnableCodecOverrides.java  ESExprOverrideCodec.java  ESExprTag.java  InlineValue.java  IntCodecBase.java  Keyword.java  KeywordMapping.java  OptionalValue.java  OptionalValueCodec.java  StringTable.java  SyntaxException.java  Unsigned.java  UseCodec.java  VarArg.java  VarArgCodec.java  VarArgs.java  Vararg.java  VarargCodec.java
java/lib/src/test/java/dev/argon/esexpr/: BinaryEncodingTest.java  ESExprJsonDeserializer.java  LibraryTest.java
js/: .npmignore  package-lock.json  package.json  tsconfig.json
js/lib/: binary_format.js  binary_format.js.map  index.js  index.js.map  index.test.js  index.test.js.map
js/src/: binary_format.test.ts  binary_format.ts  index.test.ts  index.ts  util.ts
rust/: Cargo.toml  publish.sh
rust/esexpr/: Cargo.toml  README.md  build.rs
rust/esexpr-utils/: Cargo.toml
rust/esexpr-utils/src/: lib.rs
rust/esexpr/src/: lib.rs
rust/esexpr/src/binary_format/: mod.rs
rust/esexpr/src/text_format/: esexpr_text.lalrpop  lexer.rs  mod.rs
rust/esexpr/tests/: derive_tests.rs
rust/esexpr_binary/: Cargo.toml  README.md
rust/esexpr_binary/src/: lib.rs
rust/esexpr_binary/tests/: parsing.rs
rust/esexpr_derive/: Cargo.toml  README.md
rust/esexpr_derive/src/: lib.rs
rust/esexpr_json/: Cargo.toml  README.md
rust/esexpr_json/src/: lib.rs
rust/esexpr_text/: Cargo.toml  README.md
rust/esexpr_text/src/: esexpr_text.lalrpop  lexer.rs  lib.rs  parser.rs
rust/esexpr_text/tests/: parsing.rs
scala/: .sdkmanrc  build.sbt
scala/esexpr/js/src/main/scala/esexpr/: ESExprBinaryDecoder.scala  ESExprBinaryEncoder.scala  ESExprObjectPlatformSpecific.scala  StringTableObjectPlatformSpecific.scala
scala/esexpr/js/src/main/scala/esexpr/sjs/: ESExpr.scala
scala/esexpr/jvm/src/main/scala/esexpr/: ESExprBinaryDecoder.scala  ESExprBinaryEncoder.scala  ESExprObjectPlatformSpecific.scala  StringTableObjectPlatformSpecific.scala
scala/esexpr/shared/src/main/scala/esexpr/: DictCodec.scala  Dictionary.scala  ESExpr.scala  ESExprCodec.scala  ESExprDecodeException.scala  ESExprException.scala  ESExprFormatException.scala  ESExprTag.scala  MacroUtils.scala  OptionalValueCodec.scala  StringTable.scala  VarargCodec.scala  defaultValue.scala  inlineValue.scala  keyword.scala  simple.scala  vararg.scala
scala/esexpr/shared/src/main/scala/esexpr/unsigned/: UnsignedTypes.scala  package.scala
scala/esexpr/shared/src/test/scala/esexpr/: DerivationTests.scala
scala/esexpr/shared/src/test/scala/esexpr/unsigned/: UnsignedTests.scala
scala/esexpr/src/main/scala/esexpr/: ESExpr.scala  ESExprCodec.scala  ESExprCodecDerivation.scala  ESExprError.scala  ESExprException.scala  ESExprTag.scala  WrappedCodec.scala  constructor.scala  dict.scala  optional.scala
scala/esexpr/src/main/scala/esexpr/unsigned/: package.scala
scala/esexpr/src/test/scala/esexpr/: DerivationTests.scala
tests/: binary.esx  binary.esxb  binary.json  bool_false.esx  bool_false.esxb  bool_true.esx  bool_true.esxb  constructor-keyword.esx  constructor-keyword.esxb  constructor-keyword.json  constructor.esx  constructor.json  constructor2.esx  constructor2.esxb  constructor2.json  float32.esx  float32.esxb  float32.json  float64.esx  float64.esxb  float64.json  generate_binary.sh  int.esx  int.esxb  int.json  null.esx  null.esxb  null.json  str.esx  str.esxb  str.json
(+21 files in other folders)
