[package]
name = "esexpr"
version = "0.1.0"
edition = "2021"

[features]
default = [ "text-format", "binary-format" ]
text-format = [ "dep:lalrpop-util", "dep:lalrpop", "dep:logos", "dep:hexfloat2" ]
binary-format = []

[build-dependencies]
lalrpop = { version = "0.20.2", optional = true }

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["unicode", "lexer"], optional = true }
num-bigint = "0.4.5"
num-integer = "0.1.46"
esexpr-derive = { path = "../esexpr_derive" }
logos = { version = "0.14.0", optional = true }
hexfloat2 = { version = "0.1.3", optional = true }
derive_more = "0.99.17"
