[package]
name = "esexpr"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
description = "ESExpr serialization format and related utilities."
documentation = "https://docs.rs/esexpr"
homepage = "https://github.com/argon-lang/esexpr"
repository = "https://github.com/argon-lang/esexpr"
categories = [ "encoding" ]
readme = "README.md"

[features]
default = []

[dependencies]
num-bigint = "0.4.5"
num-integer = "0.1.46"
esexpr-derive = { version = "0.1.9", path = "../esexpr_derive" }
derive_more = "0.99.17"
