[package]
name = "esexpr-binary"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
description = "ESExpr serialization binary format."
documentation = "https://docs.rs/esexpr-binary"
homepage = "https://github.com/argon-lang/esexpr"
repository = "https://github.com/argon-lang/esexpr"
categories = [ "encoding" ]
readme = "README.md"

[dependencies]
esexpr = { path = "../esexpr", version = "0.1.6" }
num-bigint = "0.4.5"
derive_more = "0.99.17"
itertools = "0.13.0"

[dev-dependencies]
serde_json = { version = "1.0.120", features = ["float_roundtrip"] }
esexpr-json = { version = "0.1.8", path = "../esexpr_json" }
