[package]
name = "esexpr-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
regex = "1.10.4"
syn = { version = "2.0.63", features = ["derive", "full"] }

[dev-dependencies]

syn = { version = "2.0.63", features = ["derive", "full", "visit"] }
