[package]
name = "esexpr-json"
version = "0.1.17"
edition = "2021"
license = "Apache-2.0"
description = "ESExpr serialization JSON encoding mappings."
documentation = "https://docs.rs/esexpr-text"
homepage = "https://github.com/argon-lang/esexpr"
repository = "https://github.com/argon-lang/esexpr"
categories = [ "encoding" ]
readme = "README.md"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
esexpr = { path = "../esexpr", version = "0.1.17" }
num-bigint = { version = "0.4.6" }
base64 = "0.22.1"
