[package]
name = "esexpr-text"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "ESExpr serialization text format."
documentation = "https://docs.rs/esexpr-text"
homepage = "https://github.com/argon-lang/esexpr"
repository = "https://github.com/argon-lang/esexpr"
categories = [ "encoding" ]
readme = "README.md"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
esexpr = { path = "../esexpr", version = "0.1.2" }
lalrpop-util = { version = "0.20.2", features = ["unicode", "lexer"] }
logos = "0.14.0"
hexfloat2 = "0.1.3"
num-bigint = "0.4.5"
