[package]
name = "esexpr-text"
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"
description = "ESExpr serialization text format."
documentation = "https://docs.rs/esexpr-text"
homepage = "https://github.com/argon-lang/esexpr"
repository = "https://github.com/argon-lang/esexpr"
categories = [ "encoding" ]
readme = "README.md"

[dependencies]
esexpr = { path = "../esexpr", version = "0.1.11" }
hexfloat2 = "0.1.3"
num-bigint = "0.4.5"
nom = "7.1.3"

[dev-dependencies]
serde_json = { version = "1.0.120", features = ["float_roundtrip"] }
esexpr-json = { version = "0.1.11", path = "../esexpr_json" }
